objects/QuoteApprovalMatrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Matrix is used to update the approval level on quote line. 
If discount of a quote line meet any criteria in the matrix, the level will be set to the quote line.</description>
    <fields>
        <fullName>Discount__c</fullName>
        <description>if discount &lt; 0, means the criteria is met everytime.</description>
        <label>Discount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>1 for director approval
2 for VP
3 for CXO</description>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Three values possible:
Virtual
Physical
New Business</description>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Quote Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Discount__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>